force-app/main/default/objects/AddInfo__c/AddInfo__c.object-meta.xml
<CustomObject>
    <label>追加情報</label>
    <nameField>
        <label>追加情報名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>