force-app/main/default/objects/AddInfo__c/fields/DamagedItemName__c.field-meta.xml
<CustomField>
    <fullName>DamagedItemName__c</fullName>
    <label>損害品名</label>
    <length>20</length>
    <type>Text</type>
</CustomField>