force-app/main/default/objects/AddInfo__c/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <label>問合せ・事故受付管理</label>
    <referenceTo>Management__c</referenceTo>
    <relationshipLabel>追加情報</relationshipLabel>
    <relationshipName>AddInfoR</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>