force-app/main/default/objects/AddInfo__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>