force-app/main/default/objects/AddInfo__c/fields/RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNumber__c</fullName>
    <label>登録番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>